--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Festive&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Shadows+Into+Light&display=swap"
       rel="stylesheet"
     />
-    <title>Love Letter to Abimbola</title>
+    <title>Love Letter to Ayomide</title>
   </head>
   <body>
     <section class="landingContainer">
@@ -37,7 +37,7 @@
         class="landingIcon landingIcon4"
       />
       <div class="landingTextBox">
-        <h2>Love Letter to Abimbola</h2>
+        <h2>Love Letter to Ayomide (AYM)</h2>
         <button>Read More</button>
       </div>
     </section>
@@ -65,8 +65,8 @@
       <div class="loveWording">
 
         <div class="recipientImages">
-            <img src="images/bimbola-1.jpg" alt="#" class="firstImage"/>
-            <img src="images/bimbola-2.jpg" alt="#" class="secondImage"/>
+            <img src="images/IMG-20221110-WA0028.jpg" alt="#" class="firstImage"/>
+            <img src="images/IMG-20221110-WA0033.jpg" alt="#" class="secondImage"/>
         </div>
 
         <div class="letters">
@@ -91,7 +91,7 @@
         <div class="love-message-textbox">
             <h2>Happy Valentines Day</h2>
             <article class="message-body">
-                <span class="salutation">Dear Bimbola <img src="images/heart-icon-1.png" class="salutationImg"/>,</span>
+                <span class="salutation">Dear Ayo <img src="images/heart-icon-1.png" class="salutationImg"/>,</span>
                 <p class="paragraph">I love you daily</p>
                 <p class="paragraph">I love you freely</p>
                 <p class="paragraph">I love you purely</p>
